--- a/scss_6/_main.scss
+++ b/scss_6/_main.scss
@@ -29,7 +29,7 @@ main {
         height: 1000px;
         position: absolute;
         top: 0px;
-        background: #f0f0f0;
+        background: #101010;
         z-index: -999;
     }
 }
