--- a/css_5/style.css
+++ b/css_5/style.css
@@ -181,6 +181,13 @@ header .top .threeCircle button:nth-of-type(5):hover, header .top .threeCircle b
   border-color: #de1e30;
   background: #ffffff;
 }
+header .top .threeCircle button:nth-of-type(6) {
+  background: #181818;
+}
+header .top .threeCircle button:nth-of-type(6):hover, header .top .threeCircle button:nth-of-type(6):active, header .top .threeCircle button:nth-of-type(6).active {
+  border-color: #ffc13c;
+  background: #181818;
+}
 header article {
   width: 100%;
   height: 85px;
