--- a/scss_7/_main.scss
+++ b/scss_7/_main.scss
@@ -29,7 +29,7 @@ main {
         height: 1000px;
         position: absolute;
         top: 0px;
-        background: #101010;
+        background: #19202a;
         z-index: -999;
     }
 }
