--- a/scss_7/_rightside.scss
+++ b/scss_7/_rightside.scss
@@ -9,7 +9,7 @@
     z-index: 6;
     scrollbar-width: thin;
     margin-top: 15px;
-    background: #252525;
+    background: #212832;
 
     &::-webkit-scrollbar {
         width: 5px;
@@ -30,7 +30,7 @@
     .statusWindow {
         width: 100%;
         height: 120px;
-        background: #252525;
+        background: #212832;
         position: relative;
         margin-bottom: 10px;
 
@@ -41,12 +41,12 @@
             height: 10px;
             bottom: -10px;
             left: 0px;
-            background: #101010;
+            background: #19202a;
         }
         
         p {
-            background: #252525;
-            color: #ffc13c;
+            background: #3d5261;
+            color: #feb300;
             padding: 7px 15px;
             font-size: 12px;
             position: relative;
@@ -56,7 +56,7 @@
                 position: absolute;
                 width: 94%;
                 height: 1px;
-                background: #b5833b;
+                background: #feb300;
                 bottom: -1px;
                 left: 50%;
                 transform: translateX(-50%);
@@ -70,7 +70,7 @@
                 top: 50%;
                 left: 10px;
                 transform: translateY(-50%);
-                background: #ff4719;
+                background: #feb300;
             }
         }
 
@@ -86,9 +86,9 @@
                 padding: 5px 15px;
                 font-size: 14px;
                 position: relative;
-                color: #fb770a;
+                color: #feb300;
                 margin-bottom: 3px;
-                border-bottom: solid 1px #b5833b;
+                border-bottom: solid 1px #5c6d79;
 
                 &:last-child {
                     margin: 0px;
@@ -97,14 +97,14 @@
                 span {
                     float: right;
                     font-size: 12px;
-                    color: #0ad317;
+                    color: #00c613;
 
                     &.onWait {
-                        color: #ababab;
+                        color: #99aab6;
                     }
 
                     &.fail {
-                        color: #ff361b;
+                        color: #f42a2a;
                     }
                 }
 
@@ -113,7 +113,7 @@
                     width: 15px;
                     height: 15px;
                     background: transparent;
-                    border: solid 1px #ababab;
+                    border: solid 1px #feb300;
                     border-radius: 15px;
                     margin-left: 15px;
                     position: relative;
@@ -125,7 +125,7 @@
                         position: absolute;
                         width: 1px;
                         height: 7px;
-                        background: #ababab;
+                        background: #feb300;
                         transform: rotate(45deg);
                         top: 3px;
                         right: 6px;
@@ -136,7 +136,7 @@
                         position: absolute;
                         width: 1px;
                         height: 7px;
-                        background: #ababab;
+                        background: #feb300;
                         transform: rotate(-45deg);
                         top: 3px;
                         left: 6px;
@@ -150,13 +150,13 @@
     .liveWindow {
         width: 100%;
         height: auto;
-        background: #252525;
+        background: #212832;
         text-align: center;
         position: relative;
 
         .title {
-            background: #252525;
-            color: #ffc13c;
+            background: #3d5261;
+            color: #feb300;
             padding: 7px 15px;
             font-size: 12px;
             text-align: left;
@@ -167,7 +167,7 @@
                 position: absolute;
                 width: 94%;
                 height: 1px;
-                background: #b5833b;
+                background: #feb300;
                 bottom: -1px;
                 left: 50%;
                 transform: translateX(-50%);
@@ -181,7 +181,7 @@
                 top: 50%;
                 left: 10px;
                 transform: translateY(-50%);
-                background: #ff4719;
+                background: #feb300;
             }
         }
 
@@ -189,6 +189,7 @@
             width: 100%;
             height: auto;
             position: relative;
+            background: #feb300;
 
             .leftTeam,.rightTeam {
                 display: inline-block;
@@ -214,7 +215,7 @@
     
                 p {
                     font-size: 12px;
-                    color: #ababab;
+                    color: #1f385c;
                     line-height: 20px;
                 }
             }
@@ -230,10 +231,10 @@
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%,-50%);
-                    color: #ffffff;
+                    color: #1f385c;
     
                     span {
-                        color: #ff4719;
+                        color: #1f385c;
                         font-size: 12px;
                     }
                 }
@@ -241,10 +242,11 @@
         }
 
         .liveShow {
-            width: 100%;
+            width: 95%;
             height: 195px;
-            background: url('../images/forCss_5/live.png') no-repeat;
+            background: url('../images/forCss_7/live.png') no-repeat;
             background-size: cover;
+            margin: 0px auto;
         }
     }
 
@@ -268,19 +270,17 @@
             }
 
             button {
-                width: 48.5%;
+                width: 49.5%;
                 height: 100%;
-                background: #252525;
-                color: #ffc13c;
+                background: #5c6d79;
+                color: #ffc438;
                 font-size: 14px;
                 float: left;
                 border-radius: 3px 3px 0px 0px;
-                border: solid 1px #775017;
-                border-bottom: none;
 
                 &:hover,&:active,&.active {
-                    background: #181818;
-                    color: #ff4719;
+                    background: #3d5261;
+                    color: #feb300;
                 }
 
                 &:last-child {
@@ -295,8 +295,8 @@
             button {
                 width: 100%;
                 height: 100%;
-                background: #181818;
-                color: #ff4719;
+                background: #3d5261;
+                color: #feb300;
                 font-size: 12px;
                 text-align: left;
                 padding-left: 15px;
@@ -307,7 +307,7 @@
                     position: absolute;
                     width: 96%;
                     height: 1px;
-                    background: #b5833b;
+                    background: #feb300;
                     bottom: -1px;
                     left: 50%;
                     transform: translateX(-50%);
@@ -321,7 +321,7 @@
                     top: 50%;
                     left: 10px;
                     transform: translateY(-50%);
-                    background: #ff4719;
+                    background: #feb300;
                 }
             }
         }
@@ -496,7 +496,7 @@
                                             height: 19px;
                                             top: -1px;
                                             left: -10px;
-                                            background: url('../images/forCss_5/liveBg3.png') no-repeat;
+                                            background: url('../images/forCss_7/liveBg3.png') no-repeat;
                                             z-index: -1;
                                         }
                                     }
@@ -533,9 +533,6 @@
             overflow-x: hidden;
             scrollbar-width: thin;
             background: #181818;
-            border: solid 1px #775017;
-            box-sizing: border-box;
-            border-width: 0px 1px;
 
             &::-webkit-scrollbar {
                 width: 5px;
