--- a/scss_7/_table.scss
+++ b/scss_7/_table.scss
@@ -271,7 +271,7 @@
 				&.tbimg2 {
 					width: 20px;
 					height: 20px;
-					background: url('../images/forCss_5/heart4.png') no-repeat;
+					background: url('../images/forCss_7/heart4.png') no-repeat;
 					background-size: 200%;
 
 					&:hover,&:active,&.active {
@@ -2761,7 +2761,7 @@
 			td {
 
 				&:nth-of-type(1) {
-					color: #fb770a;
+					color: #ffcc41;
 				}
 			}
 		}
@@ -2770,8 +2770,8 @@
 
 			td {
 
-				&:nth-of-type(1) {
-					color: #ababab;
+				&:nth-of-type(2) {
+					color: #ffcc41;
 				}
 			}
 		}
@@ -2787,42 +2787,39 @@
 			width: 50%;
 			height: auto;
 			padding: 7px;
-			color: #ababab;
+			color: #feb300;
 			border-style: solid;
 			border-width: 0px 0px 1px 0px;
-			border-color: #181818;
+			border-color: #3d5261;
 			vertical-align: middle;
-			background: #292929;
+			background: #2e3f57;
 			font-size: 12px;
 
 			&.waiting {
-				color: #8f702d;
+				color: #00c613;
 			}
 
 			&.sus {
-				color: #0ad317;
+				color: #08b30c;
 			}
 
 			&.listName {
 				padding: 15px 6px;
 
 				.vs {
-					color: #ffffff;
+					color: #9ec2f5;
 					margin: 0px 5px;
 				}
 
 				.odds {
-					color: #ffc13c;
+					color: #dedede;
 					margin-left: 5px;
 				}
 			}
 
 			&:nth-of-type(odd) {
 				border-right-width: 1px;
-			}
-
-			&:nth-of-type(even) {
-				border-left-width: 1px;
+				border-right-color: #5c6d79;
 			}
 
 			&:last-child {
@@ -2837,9 +2834,8 @@
 				transform: translate(-50%,-50%);
 				text-align: center;
 				padding: 10px 0px;
-				color: #1b1b1b;
-				background: #bfbfbf;
-				box-shadow: 1px 2px 5px 0px #00000035;
+				color: #feb300;
+				background: #5c6d79;
 			}
 		}
 	}
@@ -3006,7 +3002,7 @@
 				display: inline-block;
 				width: 33px;
 				height: 30px;
-				background: url('../images/forCss_5/topfix_ic.png');
+				background: url('../images/forCss_7/topfix_ic.png');
 				background-size: 200%;
 				position: relative;
 				overflow: hidden;
@@ -3247,7 +3243,7 @@
 				.img {
 					width: 30px;
 					height: 30px;
-					background: url(../images/forCss_5/teamimg.png) no-repeat;
+					background: url(../images/forCss_7/teamimg.png) no-repeat;
 					background-size: 200%;
 					position: absolute;
 					top: 50%;
@@ -3476,7 +3472,7 @@
 					top: 50%;
 					left: 50%;
 					transform: translate(-50%,-50%);
-					background: url('../images/forCss_5/avatar_big.png') no-repeat;
+					background: url('../images/forCss_7/avatar_big.png') no-repeat;
 					background-size: 100%;
 
 					&::before {
@@ -3484,7 +3480,7 @@
 						width: 30px;
 						height: 30px;
 						position: absolute;
-						background: url('../images/forCss_5/edit2.png') no-repeat;
+						background: url('../images/forCss_7/edit2.png') no-repeat;
 						right: 0px;
 						bottom: 0px;
 						cursor: pointer;
@@ -3722,7 +3718,7 @@
 						position: absolute;
 						width: 14px;
 						height: 14px;
-						background: url('../images/forCss_5/reset.png') no-repeat;
+						background: url('../images/forCss_7/reset.png') no-repeat;
 						background-size: 100%;
 						left: -18px;
 						top: 3px;
@@ -3799,7 +3795,7 @@
 							float: left;
 							width: 34px;
 							height: 32px;
-							background: url('../images/forCss_5/wallet_ic4.png') no-repeat;
+							background: url('../images/forCss_7/wallet_ic4.png') no-repeat;
 							background-size: 200%;
 							margin: 20px 0px 20px 40px;
 
@@ -3846,7 +3842,7 @@
 								float: left;
 								width: 30px;
 								height: 28px;
-								background: url(../images/forCss_5/wallet_ic4.png) no-repeat;
+								background: url(../images/forCss_7/wallet_ic4.png) no-repeat;
 								background-size: 200%;
 								margin: -6px 10px 0px 0px;
 
@@ -4059,7 +4055,7 @@
 						width: 42px;
 						height: 29px;
 						margin: 0px auto 10px;
-						background: url('../images/forCss_5/add_card5.png') no-repeat;
+						background: url('../images/forCss_7/add_card5.png') no-repeat;
 						background-size: 100%;
 					}
 
@@ -4068,7 +4064,7 @@
 						.bankIc {
 							width: 40px;
 							height: 40px;
-							background: url('../images/forCss_5/bank_ic5.png') no-repeat;
+							background: url('../images/forCss_7/bank_ic5.png') no-repeat;
 							background-size: 300%;
 							position: absolute;
 							top: 22%;
@@ -4112,7 +4108,7 @@
 						width: 13px;
 						height: 13px;
 						position: absolute;
-						background: url('../images/forCss_5/infor5.png') no-repeat;
+						background: url('../images/forCss_7/infor5.png') no-repeat;
 						top: 0px;
 						left: -18px;
 					}
@@ -4444,7 +4440,7 @@
 				.arrow {
 					width: 9px;
 					height: 16px;
-					background: url('../images/forCss_5/arrow_bl2.png') no-repeat;
+					background: url('../images/forCss_7/arrow_bl2.png') no-repeat;
 					background-size: 100%;
 					display: block;
 					position: absolute;
@@ -4572,7 +4568,7 @@
 						width: 15px;
 						height: 15px;
 						position: absolute;
-						background: url(../images/forCss_5/infor5.png) no-repeat;
+						background: url(../images/forCss_7/infor5.png) no-repeat;
 						top: -1px;
 						left: -18px;
 					}
@@ -4636,7 +4632,7 @@
 							display: inline-block;
 							width: 30px;
 							height: 30px;
-							background: url('../images/forCss_5/contact_ic5.png') no-repeat;
+							background: url('../images/forCss_7/contact_ic5.png') no-repeat;
 							background-size: 500%;
 							margin-left: 30px;
 							margin: 0px 0px 6px 30px;
@@ -4662,7 +4658,7 @@
 							display: inline-block;
 							width: 50px;
 							height: 50px;
-							background: url('../images/forCss_5/joinus_ic4.png') no-repeat;
+							background: url('../images/forCss_7/joinus_ic4.png') no-repeat;
 							background-size: 500%;
 							margin-left: 25px;
 							transform: translateY(5px);
@@ -4801,7 +4797,7 @@
 						div {
 							width: 80px;
 							height: 50px;
-							background: url('../images/forCss_5/about_offical.png') no-repeat;
+							background: url('../images/forCss_7/about_offical.png') no-repeat;
 							background-size: 400%;
 							margin: 0px auto 5px;
 
@@ -4836,7 +4832,7 @@
 						div {
 							width: 80px;
 							height: 50px;
-							background: url('../images/forCss_5/about_partner.png') no-repeat;
+							background: url('../images/forCss_7/about_partner.png') no-repeat;
 							background-size: 700%;
 							margin: 0px auto 5px;
 
@@ -4895,7 +4891,7 @@
 					.join_ic {
 						width: 50px;
 						height: 50px;
-						background: url('../images/forCss_5/joinus_ic4.png') no-repeat;
+						background: url('../images/forCss_7/joinus_ic4.png') no-repeat;
 						background-size: 500%;
 						margin: 15px auto;
 
@@ -5030,7 +5026,7 @@
 						display: block;
 						width: 24px;
 						height: 18px;
-						background: url(../images/forCss_5/uploadimg5.png);
+						background: url(../images/forCss_7/uploadimg5.png);
 						background-size: 100%;
 						margin: 0px auto 5px;
 					}
@@ -5052,7 +5048,7 @@
 						width: 13px;
 						height: 13px;
 						position: absolute;
-						background: url(../images/forCss_5/infor5.png) no-repeat;
+						background: url(../images/forCss_7/infor5.png) no-repeat;
 						top: -1px;
 						left: -18px;
 					}
@@ -5219,7 +5215,7 @@
 						display: inline-block;
 						width: 82px;
 						height: 65px;
-						background: url('../images/forCss_5/version_check.png') no-repeat;
+						background: url('../images/forCss_7/version_check.png') no-repeat;
 					}
 
 					div {
@@ -5231,7 +5227,7 @@
 						vertical-align: top;
 
 						.qrcode {
-							background: url('../images/forCss_5/download_app_qr.png') no-repeat;
+							background: url('../images/forCss_7/download_app_qr.png') no-repeat;
 							background-size: 100%;
 							width: 110px;
 							height: 110px;
@@ -5272,7 +5268,7 @@
 						display: inline-block;
 						width: 40px;
 						height: 40px;
-						background: url('../images/forCss_5/download_app_browser4.png') no-repeat;
+						background: url('../images/forCss_7/download_app_browser4.png') no-repeat;
 						background-size: 200%;
 
 						&.ie {
@@ -5361,7 +5357,7 @@
 							width: 13px;
 							height: 13px;
 							position: absolute;
-							background: url(../images/forCss_5/infor5.png) no-repeat;
+							background: url(../images/forCss_7/infor5.png) no-repeat;
 							top: 0px;
 							left: -18px;
 						}
@@ -5477,7 +5473,7 @@
 						display: inline-block;
 						width: 32px;
 						height: 20px;
-						background: url(../images/forCss_5/arrow_trans5.png) no-repeat;
+						background: url(../images/forCss_7/arrow_trans5.png) no-repeat;
 						background-size: 100%;
 						margin: 0px 10px -5px 10px;
 					}
@@ -5497,7 +5493,7 @@
 							width: 13px;
 							height: 13px;
 							position: absolute;
-							background: url(../images/forCss_5/infor5.png) no-repeat;
+							background: url(../images/forCss_7/infor5.png) no-repeat;
 							top: 0px;
 							left: -18px;
 						}
@@ -5556,7 +5552,7 @@
 						width: 13px;
 						height: 13px;
 						position: absolute;
-						background: url('../images/forCss_5/infor5.png') no-repeat;
+						background: url('../images/forCss_7/infor5.png') no-repeat;
 						top: 2px;
 						left: -18px;
 					}
@@ -5591,7 +5587,7 @@
 							position: absolute;
 							width: 30px;
 							height: 29px;
-							background: url('../images/forCss_5/box_check5.png');
+							background: url('../images/forCss_7/box_check5.png');
 							right: -1px;
 							bottom: -1px;
 						}
@@ -5601,7 +5597,7 @@
 						display: block;
 						width: 50px;
 						height: 50px;
-						background: url('../images/forCss_5/save_icon.png') no-repeat;
+						background: url('../images/forCss_7/save_icon.png') no-repeat;
 						margin: -5px auto 0px;
 						background-size: 1400%;
 
@@ -5842,7 +5838,7 @@
 						display: inline-block;
 						width: 25px;
 						height: 22px;
-						background: url('../images/forCss_5/change5.png') no-repeat;
+						background: url('../images/forCss_7/change5.png') no-repeat;
 						margin: 0px 10px -5px 0px;
 					}
 				}
@@ -5921,7 +5917,7 @@
 							width: 13px;
 							height: 13px;
 							position: absolute;
-							background: url('../images/forCss_5/infor5.png') no-repeat;
+							background: url('../images/forCss_7/infor5.png') no-repeat;
 							top: 0px;
 							left: -18px;
 						}
