--- a/scss_7/style.scss
+++ b/scss_7/style.scss
@@ -12,7 +12,7 @@
 html {
     width: 100%;
     height: 100%;
-    background: #101010;
+    background: #19202a;
 
     body {
         width: 100%;
